[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Meteor.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )
bullet_scene = ExtResource( 3 )
meteor_scene = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="MeteorPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MeteorSpawnLocation" type="PathFollow2D" parent="MeteorPath"]

[node name="MeteorTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="StartTimer" type="Timer" parent="."]

[connection signal="timeout" from="MeteorTimer" to="." method="_on_MeteorTimer_timeout"]
